--- a/helm/radio/templates/radio/secrets.yaml
+++ b/helm/radio/templates/radio/secrets.yaml
@@ -6,6 +6,6 @@ metadata:
     {{- template "radio.labels" . }}
 type: Opaque
 data:
-  {{- range $key, $val := .Values.ffmpeg.secrets }}
+  {{- range $key, $val := .Values.config.secrets }}
   {{ $key }}: {{ tpl $val $ | b64enc | quote }}
   {{- end -}}
