--- a/helm/radio/templates/radio/deployment.yaml
+++ b/helm/radio/templates/radio/deployment.yaml
@@ -12,14 +12,11 @@ spec:
   template:
     metadata:
       annotations:
-  {{- if $.Values.ffmpeg.env }}
-        checksum/ffmpeg-env: {{ print $.Values.ffmpeg.env | sha256sum }}
+  {{- if $.Values.config }}
+        checksum/config: {{ print $.Values.config | sha256sum }}
   {{- end }}
-  {{- if $.Values.ffmpeg.secrets }}
-        checksum/ffmpeg-secrets: {{ print $.Values.ffmpeg.secrets | sha256sum }}
-  {{- end }}
-  {{- if $.Values.ffmpeg.entrypoint }}
-        checksum/ffmpeg-entrypoint: {{ print $.Values.ffmpeg.entrypoint | sha256sum }}
+  {{- if $.Values.liquidsoap.entrypoint }}
+        checksum/liquidsoap-entrypoint: {{ print $.Values.liquidsoap.entrypoint | sha256sum }}
   {{- end }}
   {{- if $.Values.aws.entrypoint }}
         checksum/aws-entrypoint: {{ print $.Values.aws.entrypoint | sha256sum }}
@@ -30,57 +27,26 @@ spec:
       labels:
         app: {{ $.Release.Name }}-radio
     spec:
-      securityContext:
-        #runAsUser: 33
-        #runAsGroup: 33
-        fsGroup: 33
       hostAliases:
       - ip: 127.0.0.1
         hostnames:
         - icecast
         - mpd
       containers:
-      - name: ffmpeg-a
-        image: jrottenberg/ffmpeg:4.1-ubuntu
+      - name: liquidsoap
+        image: savonet/liquidsoap:v2.1.2
+        command: [ "/usr/bin/liquidsoap", "/entrypoint.liq" ]
         imagePullPolicy: IfNotPresent
-        command: [ "bash", "/entrypoint" ]
-        env:
-        - name: YT_DOMAIN
-          value: a.upload.youtube.com
-  {{- range $key, $val := $.Values.ffmpeg.env }}
-        - name: {{ $key }}
-          valueFrom:
-            configMapKeyRef:
-              name: {{ $.Release.Name }}-radio-config
-              key: {{ $key }}
-  {{- end }}
-{{- if $.Values.ffmpeg.secrets }}
-  {{- range $key, $val := $.Values.ffmpeg.secrets }}
-        - name: {{ $key }}
-          valueFrom:
-            secretKeyRef:
-              name: {{ $.Release.Name }}-radio-secret
-              key: {{ $key }}
-  {{- end }}
-{{- end }}
-        startupProbe:
-          exec:
-            command:
-            - cat
-            - /tmp/healthy
-          failureThreshold: 90
-          periodSeconds: 10
         volumeMounts:
         - name: data
           mountPath: /data
-        - name: entrypoint-ffmpeg
-          mountPath: /entrypoint
-          subPath: entrypoint.ffmpeg
+        - name: liquidsoap-config
+          mountPath: /entrypoint.liq
+          subPath: entrypoint.liq
           readOnly: true
       - name: icecast
         image: vitiman/alpine-icecast:latest
         imagePullPolicy: IfNotPresent
-        # command: [ "sh", "/entrypoint" ]
         ports:
         - containerPort: 8000
       - name: ympd
@@ -103,7 +69,7 @@ spec:
           periodSeconds: 10
         volumeMounts:
         - name: data
-          mountPath: /var/lib/mpd/music
+          mountPath: /var/lib/mpd/music/
         - name: entrypoint-mpd
           mountPath: /entrypoint
           subPath: entrypoint.mpd
@@ -114,22 +80,13 @@ spec:
         imagePullPolicy: IfNotPresent
         command: [ "sh", "/entrypoint" ]
         env:
-  {{- range $key, $val := $.Values.ffmpeg.env }}
-        - name: {{ $key }}
-          valueFrom:
-            configMapKeyRef:
-              name: {{ $.Release.Name }}-radio-config
-              key: {{ $key }}
-  {{- end }}
-{{- if $.Values.ffmpeg.secrets }}
-  {{- range $key, $val := $.Values.ffmpeg.secrets }}
+  {{- range $key, $val := $.Values.config.secrets }}
         - name: {{ $key }}
           valueFrom:
             secretKeyRef:
               name: {{ $.Release.Name }}-radio-secret
               key: {{ $key }}
   {{- end }}
-{{- end }}
         volumeMounts:
         - name: data
           mountPath: /aws/data
@@ -140,13 +97,13 @@ spec:
       volumes:
       - name: data
         emptyDir: {}
-      - name: entrypoint-ffmpeg
+      - name: liquidsoap-config
         configMap:
           name: {{ $.Release.Name }}-radio-config
           optional: true
           items:
-          - key: entrypoint.ffmpeg
-            path: entrypoint.ffmpeg
+          - key: entrypoint.liq
+            path: entrypoint.liq
       - name: entrypoint-aws
         configMap:
           name: {{ $.Release.Name }}-radio-config
