--- a/main.yaml
+++ b/main.yaml
@@ -1,21 +1,14 @@
 ---
-- hosts: localhost
+- hosts: radio
   gather_facts: true
   roles:
   - radio
   vars:
     RADIO_URL: "http://icecast:8000/mpd"
-    VBR: "10000k"
-    FPS: "25"
-    QUAL: "veryfast"
-    CRF: "25"
-    VIDEO_SOURCE: "/video/play.mp4"
-    fontcolor: "white"
+    VBR: "4000k"
+    VIDEO_SOURCE: "play.mp4"
     fontsize: "24"
-    boxcolor: "black@0.5"
-    boxborderw: "5"
-    FFMPEG_X: "0"
-    FFMPEG_Y: "0"
     youtube_protocol: "rtmp"
     track_output: "true"
     user: "root"
+    aws: "false"
